# SkillsHub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  README.md  STEP1_PLAN.md  alembic.ini  build_design_html.py  cloudbuild.yaml  compose.yaml  design.html  pyproject.toml  requirements.txt  skillhub.html
.claude/: launch.json  settings.json
.claude/skills/sample-validator/: README.md  SKILL.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: feature.yml  task.yml
.github/scripts/: sync-labels.sh
.github/workflows/: python-tests.yml
.streamlit/: config.toml
agent/: .gitignore  README.md  pyproject.toml
demos/step1/: demo.html
demos/step2/: demo.html
demos/step3/: demo.html
docs/: TODO-issue-15.md  TODO-issue-17.md  deploy.md  local-development.md
docs/designs/overview/: overview.html  overview.md
docs/designs/step1/: er.md  step1.html  step1.md
docs/designs/step2/: step2.html  step2.md
docs/designs/step3/: step3.html  step3.md
samples/skills/data-catalog/: SKILL.md
samples/skills/meeting-summarizer/: SKILL.md
samples/skills/weekly-report/: SKILL.md
scripts/: migrate.sh  serve.sh
skillhub/shared/: __init__.py  schemas.py
skillhub/shared/agents/: __init__.py  _model.py  analyzer.py  collector.py  composer.py  deduper.py  improver.py  librarian.py  online.py  searcher.py
skillhub/shared/tools/: __init__.py  ai_tools.py  db_tools.py  github_tools.py
skillshub/app/: main.py
skillshub/app/views/: components.py  dashboard.py  detail.py  repos.py  search.py  suggestions.py
skillshub/batch/: run_analyze_demo.py  run_collect.py  run_dedup.py
skillshub/db/: seed.py
skillshub/db/init/: 01_extension.sql
skillshub/db/migrations/: env.py
skillshub/shared/: config.py  db.py  freshness.py  models.py  schemas.py  services.py  update_status.py
skillshub/shared/agents/: __init__.py  analyzer.py  collector.py  composer.py  deduper.py  librarian.py  (+1 more)
skillshub/tests/: conftest.py  test_analyzer.py  test_collector.py  test_composer.py  test_deduper.py  test_freshness.py  test_librarian.py  test_local_source.py  test_run_collect.py  test_searcher.py  test_services.py  test_update_status.py
tasks/: lessons.md
(+8 files in other folders)
