[project]
name = "skillshub"
version = "0.1.0"
description = "社内 AI Skill ダッシュボード"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "google-adk>=2.2.0",
    "google-cloud-aiplatform>=1.158.0",
    "google-cloud-secret-manager>=2.29.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
# Alembic が自動生成するマイグレーションは整形・lint の対象外（手で整えない）。
extend-exclude = ["skillshub/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["skillshub/db/migrations/"]

[[tool.mypy.overrides]]
# pgvector は型スタブ(py.typed)を同梱していないため import-untyped を抑制。
module = "pgvector.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["skillshub/tests"]
pythonpath = ["."]
